# melody-features

./: .coveragerc  .gitignore  Dockerfile  MANIFEST.in  NOTICE  README.md  __init__.py  complexity.py  correlations.py  import_mid.py  interpolation_contour.py  midi_encoder.py  midi_formatter.py  mtypes.py  narmour.py  ngram_counter.py  pyproject.toml  pytest.ini  requirements.txt  similarity.py  stats.py
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: coverage.yml  deploy-features-table.yml  test.yml  update-readme-table.yml
IDyOM/: README.md  example_analysis.py  idyom_analyzer.py  requirements.txt  setup_idyom.sh  test_setup.py
IDyOM/py2lisp/: configuration.py  export.py  viz.py
docs/: quarto_table_build.py
notebooks/: example.ipynb  output.csv  output2.csv
src/melodic_feature_set/: __init__.py  algorithms.py  complexity.py  corpus.py  correlations.py  distributional.py  example.ipynb  example.py  features.py  idyom_interface.py  import_mid.py  install_idyom.sh  interpolation_contour.py  melody_tokenizer.py  mtypes.py  ngram_counter.py  representations.py
src/melodic_feature_set/melsim_wrapper/: example.py  melsim.py
src/melody_features/: __init__.py  absolute_pitch_features.py  algorithms.py  complexity.py  complexity_features.py  contour_features.py  corpus.py  corpus_features.py  distributional.py  expectation_features.py  feature_decorators.py  feature_dispatch.py  feature_histogram.py  feature_metadata.py  feature_registry.py  feature_utils.py  features.py  generate_readme_table.py  huron_contour.py  idyom_interface.py  import_mid.py  inter_onset_interval_features.py  interpolation_contour.py  legacy_shims.py  lexical_diversity_features.py  melody_tokenizer.py  meter_estimation.py  metre_features.py  ngram_counter.py  pitch_class_features.py  pitch_interval_features.py  polynomial_contour.py  quarto_table_build.py  representations.py  reshape.py  similarity.py  stats.py  step_contour.py  timing_features.py  tonal_tension.py  (+1 more)
tests/: jsymbolic_test_values.csv  miditoolbox_reference_values.csv  must_reference_values.csv  run_tests.py  test_complexity_features.py  test_contour_features.py  test_corpus_features.py  test_corpus_functionality.py  test_corpus_import.py  test_feature_facade_exports.py  test_feature_registry_dispatch.py  test_features_systematic.py  test_idyom.py  test_idyom_corpus_config.py  test_idyom_setup.py  test_interval_features.py  test_jsymbolic_validation.py  test_legacy_import_shims.py  test_long_format.py  test_melsim.py  test_meter_estimation.py  test_metre_features.py  test_miditoolbox_validation.py  test_module_setup.py  test_must_algorithms.py  test_must_integration.py  test_must_tokenizer.py  test_must_validation.py  test_ngram_counter.py  test_partitura.py  test_pitch_features.py  test_representations.py  test_timing_features.py  test_timing_stats.py  test_tonality_features.py
tests/helpers/: melody.py  midi.py
workflows/: test.yml
(+946 files in other folders)
