[project]
name = "melodic_feature_set_Dav8Circle"
version = "0.0.11"
authors = [
  { name="David Whyatt", email="dmw56@cam.ac.uk" },
]
description = "A Python package for computing tonnes of melodic features found in computational musicology literature."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "mido",
    "natsort",
    "numpy",
    "pandas",
    "pretty_midi",
    "py2lispIDyOM",
    "scipy",
    "tenacity",
    "tqdm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Dav8Circle/melodic_feature_set"
Issues = "https://github.com/Dav8Circle/melodic_feature_set/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
